# network_engine

./: .gitignore  @clean.bat  @fullBuild.bat  @make.bat  @open.bat  CMakeLists.txt  README.md
Client/: .clang-format  CMakeLists.txt
Client/include/: ClientBase.h  GameClient.h  MyApp.h
Client/src/: Client.cpp  GameApp.cpp  GameClient.cpp  Main.cpp
NetworkLib/: .clang-format  pch.h
NetworkLib/GameApp/: ClientImpl.h  GameApp.cpp  GameApp.h  GameClient.cpp  GameClient.h  GamePacket.h  GameServer.cpp  GameServer.h  Main.cpp  MyApp.cpp  MyApp.h  ServerConnection.cpp  ServerConnection.h
NetworkLib/Objects/: Player.cpp  Player.h
NetworkLib/include/Client/: BaseClient.h  Client.h
NetworkLib/include/Core/: Socket.h  SocketAddress.h
NetworkLib/include/Server/: BaseConnection.h  BaseServer.h  Server.h
NetworkLib/include/Utility/: Common.h  ErrorHandler.h  Packet.h  TypeContenter.h  TypeDef.h
NetworkLib/include/Utility/Serializer/: ByteSwap.h  Deserializer.h  Serializer.h
NetworkLib/src/: main.cpp
NetworkLib/src/Client/: BaseClient.cpp  Client.cpp
NetworkLib/src/Core/: Socket.cpp  SocketAddress.cpp
NetworkLib/src/Server/: BaseConnection.cpp  BaseServer.cpp  Server.cpp
Source/: pch.h
Source/include/Core/: Socket.h  SocketAddress.h
Source/include/Utility/: Common.h  ErrorHandler.h
Source/src/: imgui_demo.cpp  main.cpp
Source/src/Core/: Socket.cpp  SocketAddress.cpp
